   the <>s: $<%qa>. [GM]
 * %q<foo> can access named Q-registers. %q<%qa> can work as a q-register
   dereference. [GM]
 * New %= substitution, which evaluates to the dbref/attribute currently
   being evaluated. Useful for coding things which loop. [MG]

Attributes:
 * Branch attributes now show the 'branch' attribute flag in lflags(). [MG]
 
Functions:
 * setq(), regmatch(), strmatch() and sql() accept q-register names of
   more than one character. [GM]
 * unsetq() now accepts patterns of q-register names. [GM]
 * listq() lists q-registers available to r(), optionally limited to those
   matching a pattern. [GM]
 * elock() now only requires that you can see the lock you're trying to test.
   Suggested by Sketch@M*U*S*H. [MG]

Fixes:
 * isword(ansi(r,foo)) would return 0. isword now removes markup before
   checking. Ditto for isdbref, isnum, isint, isobjid. [GM]
 * round() would sometimes return a number with a decimal point but no
   digits after it, like "5.". Reported by Minion. [MG]
 * sortby() and foreach() now use call_ufun in the hardcode, fixing a number
   of minor bugs. [MG]
 * rand(-X, -Y) where -X > -Y was broken. [SW]
 * Fix a couple of minor memory leaks. [SW]
 * Possible crashbug in switch(), @switch, iter() and @dolist fixed. [MG]
 * Fix crash when reading a database with an invalid lock key. Reported by
   Covenant. [SW]
 * Some fixes to the test suite by Sketch.
 * Help fixes by misskaly and others. [MG]

Version 1.8.4 patchlevel 3                                 Mar 18,  2011

Events:
 * Event system added. Certain things can now trigger events using @config
   event_handler. See "help events" and "help event <type>". [GM]
 * dump events: dump`5min, dump`1min, dump`complete.
 * object events: object`create, object`destroy, object`move,
   object`rename, object`kill.
 * sql events: sql`connect, sql`disconnect.
 * signal events: signal`usr1, signal`usr2.
 * player events: player`create, player`fail, player`connect,